--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "css/style.css">
+    
+
     <title>WebChadz!</title>
   </head>
-  <body>
-      <header class ="header">
-          <div class = "container" >
-              
-              <div class="nav">
-                  <a href="index.html">
-                    <img src="img/logo.png" alt="Логотип" class = "logo">
-                  </a>
-                  <a href="#" class="buttons">Каталог</a>
-                  <a href="#" class="buttons">Мужчины</a>
-                  <a href="#" class="buttons">Женщины</a>
-                  <a href="#" class="buttons">Аксессуары</a>
-                  <a href="#" class="buttons">О нас</a>
-                  <a href="#"><img src="img/cart.png" alt="Корзина" class = "cart"></a>
-              </div>
-          </div>    
-      </header>
+ <body class="shop__body">
+      <main class="page">
+        <header class ="header">
+                <div class = "header__top">
+                    <a href = "index.html"><img src ="img/logo.jpg" class= "logo"></a>
+                    <nav class = "header__nav ">
+                    <ul class = "header__nav__list">
+                        <li class = "header__list-item"><a class = "header__list__item-link" href ="#">Магазин</a></li>
+                        <li class = "header__list-item"><a class = "header__list__item-link" href = "#">Контакты</a></li>
+                        <li class = "header__list-item"><a class = "header__list__item-link" href = "#">О нас</a></li>
+                        <div class="firstinfo" >Академика Киренского 15</div>
+                        <a class="buttons" href="mailto:p9102003@yandex.ru">ghretj@gmail.com</a>                    
+                        <a class ="buttons" href="tel:+79131995214">+7 (913) -199-52-14</a>
+                        <div class="daysinfo" >пн-пт 12:00-20:00</div>
+                        <div class="daysinfo" >сб 14:00-20:00</div>
+                        </ul>
+                    </nav>
+                </div>
+                <div class = "header__bottom"></div>
+          </header>
+     </main>
   </body>
 </html>
