--- a/index.html
+++ b/index.html
@@ -11,21 +11,26 @@
       <main class="page">
         <header class ="header">
                 <div class = "header__top">
-                    <a href = "index.html"><img src ="img/logo.jpg" class= "logo"></a>
+                    <a href = "index.html"><img src ="img/logo2.png" class= "logo"></a>
                     <nav class = "header__nav ">
                     <ul class = "header__nav__list">
                         <li class = "header__list-item"><a class = "header__list__item-link" href ="#">Магазин</a></li>
                         <li class = "header__list-item"><a class = "header__list__item-link" href = "#">Контакты</a></li>
                         <li class = "header__list-item"><a class = "header__list__item-link" href = "#">О нас</a></li>
-                        <div class="firstinfo" >Академика Киренского 15</div>
-                        <a class="buttons" href="mailto:p9102003@yandex.ru">ghretj@gmail.com</a>                    
-                        <a class ="buttons" href="tel:+79131995214">+7 (913) -199-52-14</a>
-                        <div class="daysinfo" >пн-пт 12:00-20:00</div>
-                        <div class="daysinfo" >сб 14:00-20:00</div>
+                        
                         </ul>
                     </nav>
                 </div>
-                <div class = "header__bottom"></div>
+            
+                <div class = "header__bottom">
+                        <ul class = "bottom__info-list">
+                            <li class = "bottom__info-list__items">Бауманская 20с7</li>
+                            <li class = "bottom__info-list__items"> <a class="bottom__info-contacts" href="mailto:p9102003@yandex.ru">ghretj@gmail.com</a> </li>
+                            <li class = "bottom__info-list__items"> <a class ="bottom__info-contacts" href="tel:+79131995214">+7 (913) -199-52-14</a> </li>
+                            <li class = "bottom__info-list__items">пн-пт 12:00-20:00</li>
+                            <li class = "bottom__info-list__items">сб 14:00-20:00</li>
+                        </ul>        
+                </div>
           </header>
      </main>
   </body>
